--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/drawer": "^5.x",
-    "@react-navigation/native": "^5.x",
-    "@react-navigation/stack": "^5.x",
+    "@react-navigation/drawer": "5.12.9",
+    "@react-navigation/native": "5.9.8",
+    "@react-navigation/stack": "5.14.9",
     "expo": "44",
     "expo-constants": "~13.0.0",
     "expo-status-bar": "~1.2.0",
