--- a/package.json
+++ b/package.json
@@ -6,31 +6,28 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "6.2.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/drawer": "5.12.9",
     "@react-navigation/native": "5.9.8",
     "@react-navigation/stack": "5.14.9",
-    "expo": "44",
-    "expo-constants": "~13.0.0",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-elements": "^3.4.2",
-    "react-native-gesture-handler": "~2.1.0",
-    "react-native-reanimated": "2.2.0",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1",
-    "redux": "4.1.2",
-    "react-redux": "7.2.6",
-    "@reduxjs/toolkit": "1.7.2",
-    "@react-native-picker/picker": "2.2.1",
-    "@react-native-community/datetimepicker": "4.0.0"
+    "@reduxjs/toolkit": "^1.8.6",
+    "expo": "~46.0.13",
+    "expo-constants": "~13.2.4",
+    "expo-status-bar": "~1.4.0",
+    "react": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-elements": "3.4.2",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
